--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,4 +17,31 @@ jobs:
           flutter-version: '3.3.8'
           channel: 'stable'
 
-      - run: flutter --version
+      - name: Install firebase-tools
+        run: npm install -g firebase-tools
+
+      - name: Create .firebaserc file
+        id: firebaserc
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: ".firebaserc"
+          encodedString: ${{ secrets.DEV_FIREBASERC }}
+
+      - name: Move .firebaserc to server
+        run: |
+          mv ${{ steps.firebaserc.outputs.filePath }} server/.firebaserc
+
+      - name: Flutter import dependencies
+        run: flutter pub get
+
+      - name: Flutter build
+        run: flutter build web
+
+      - name: Move build to server
+        run: |
+          mv build/web/* server/build/web
+
+      - name: Deploy web
+        run: |
+          cd server
+          firebase deploy --only hosting --token ${{ secrets.DEV_FIREBASE_TOKEN }}
