Permet la création d'un dossier pour le build dans le serveur

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Move build to server
         run: |
+          mkdir -p server/build/web
           mv build/web/* server/build/web
 
       - name: Deploy web
