--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,29 +7,5 @@ on:
   pull_request:
 
 jobs:
-  test-flutter:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.3.8'
-          channel: 'stable'
-
-      - name: Cache pub dependencies
-        uses: actions/cache@v3
-        with:
-          path: $/.pub-cache
-          key: $-pub-$
-          restore-keys: $-pub-
-
-      - name: Clean flutter
-        run: flutter clean
-
-      - name: Import pub dependencies
-        run: flutter pub get
-
-      - name: Testing
-        run: flutter test --coverage
+  testing-web:
+    uses: bynicodevelop/com.dotmessenger.app/.github/workflows/tests-flutter.yaml@develop
