--- a/.github/workflows/tests-flutter.yaml
+++ b/.github/workflows/tests-flutter.yaml
@@ -31,8 +31,8 @@ jobs:
       - name: Testing
         run: flutter test --coverage
 
-      # - name: Upload to code coverage
-      #   uses: codecov/codecov-action@v3
-      #   with:
-      #     token: ${{secrets.CODECOV_TOKEN}}
-      #     file: coverage/lcov.info
+      - name: Upload to code coverage
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{secrets.CODECOV_TOKEN}}
+          file: coverage/lcov.info
