Ajout du déploiement d'application sur création de tag

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,10 @@
 name: Deploy application
 
-on: 
+on:
+  workflow_dispatch:
   push:
-    branches:
-      - main
+    tags:
+      - 'release/web/v*'
 
 jobs:
   testing-web:
